app/classes/styles.css
.card-heading {
        border-bottom: none;
        font-size: 1.2em;
        color: var(--text);
}

#top-info-section {
        display: flex;
        gap: 0.5rem;
}

#top-info-section > div {
        flex: 1;
}

.card > h2,
.card > .extra-info {
        text-align: center;
}

/* Style the tab */
.tab {
        display: flex;
        flex-direction: column;

        border: 1px solid var(--border);
        background-color: var(--bg-light);
        border-radius: 10px;

        margin: 1.5rem;
        overflow: hidden;
        max-width: max-content;
        justify-content: space-between;
}

/* Style the buttons that are used to open the tab content */
.tab button {
        background-color: inherit;
        float: left;
        border: none;
        outline: none;
        cursor: pointer;
        padding: 14px 16px;
        transition: 0.3s;
}

/* Change background color of buttons on hover */
.tab button:hover {
        background-color: var(--border);
}

/* Create an active/current tablink class */
.tab button.active {
        background-color: var(--border-muted);
}

/* Style the tab content */
.tab-content {
        display: none;
        padding: 6px 12px;
}

.tab-content {
        animation: fadeEffect 0.5s; /* Fading effect takes 1 second */
}

/* Go from zero to full opacity */
@keyframes fadeEffect {
        from {
                opacity: 0;
        }
        to {
                opacity: 1;
        }
}

